--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">GylRapidAndroid</string>
+
+    <!--http err msg-->
+    <string name="start_msg">正在保存~</string>
+    <string name="wait_msg">请稍等~</string>
+    <string name="err_msg">服务不可用，请稍后再试~</string>
 </resources>
